--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bip32-utils": "^0.11.1",
     "bip39": "^2.5.0",
     "bitcoinjs-lib": "^3.3.2",
     "browserify": "^16.1.1",
     "fs": "0.0.1-security",
-    "jsonfile": "^4.0.0"
+    "jsonfile": "^4.0.0",
+    "wif": "^2.0.6"
   }
 }
